# Astraea-Peer-Reviewer

./: .env.example  .gitignore  Dockerfile  EVALUATOR_GUIDELINES.md  LICENSE  README.md  app.py  demo.py  demo_app.py  demo_orchestrator.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
AstraeaV3_env/: __init__.py  client.py  models.py
AstraeaV3_env/server/: app.py  environment.py  expert_experience.json
AstraeaV3_env/server/frontend/: app.js  index.html  styles.css
assets/demo_runs/task_1_audit_warmup/: logs.txt
assets/demo_runs/task_2_soundness_check/: logs.txt
assets/demo_runs/task_3_score_calibration/: logs.txt
assets/demo_runs/task_4_pytorch_rigor/: logs.txt
assets/demo_runs/task_5_full_audit/: logs.txt
docs/: ARCHITECTURE.md
tests/: test_environment.py
